fix: Cloudflare config - remove _redirects, fix worker name

--- a/frontend/wrangler.jsonc
+++ b/frontend/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
-    "name": "skillupv2-frontend",
+    "name": "skillupv2",
     "compatibility_date": "2025-12-23",
     "assets": {
         "directory": "./dist",
