--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "echo \"No build step required for plain Node.js\"",
     "start": "node server.js",
     "dev": "nodemon server.js",
     "swagger-gen": "node swagger.js",
