fix: several issue

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,34 @@
 FROM node:18-alpine
 WORKDIR /app
+
+# Environment variables (set these at runtime or in docker-compose)
+ENV NODE_ENV=production
+ENV PORT=5000
+
+# MongoDB
+ENV MONGO_URI=""
+
+# JWT Authentication
+ENV JWT_SECRET=""
+
+# Frontend URL (for CORS and email links)
+ENV FRONTEND_URL=""
+ENV APP_API_URL=""
+
+# Admin Configuration
+ENV ADMIN_EMAIL=""
+
+# Mailjet Email Configuration
+ENV from_email=""
+ENV EMAIL_USER=""
+ENV API_KEY=""
+ENV SECRET_KEY=""
+
+# Backblaze B2 Storage
+ENV keyID=""
+ENV applicationKey=""
+ENV B2_BUCKET_NAME=""
+
 COPY package*.json ./
 RUN npm ci --only=production
 COPY . .
