--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,12 @@
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^7.6.2",
     "react-toastify": "^11.0.5",
+    "workbox-cacheable-response": "^7.4.0",
+    "workbox-core": "^7.4.0",
+    "workbox-expiration": "^7.4.0",
+    "workbox-precaching": "^7.4.0",
+    "workbox-routing": "^7.4.0",
+    "workbox-strategies": "^7.4.0",
     "zod": "^3.25.64"
   },
   "devDependencies": {
@@ -56,6 +62,7 @@
     "globals": "^16.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-pwa": "^1.2.0"
   }
 }
