fwature: push notification

--- a/.gitignore
+++ b/.gitignore
@@ -239,3 +239,7 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
+# Firebase / GCP secrets
+backend/config/firebase-service-account.json
+*.pem
+*.key
