--- a/frontend/android/app/build.gradle
+++ b/frontend/android/app/build.gradle
@@ -66,6 +66,11 @@ dependencies {
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
+    
+    // Firebase Cloud Messaging for Push Notifications
+    implementation platform('com.google.firebase:firebase-bom:33.7.0')
+    implementation 'com.google.firebase:firebase-messaging'
+    
     implementation project(':capacitor-cordova-android-plugins')
 }
 
