--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,11 @@
     "cap:open:ios": "npx cap open ios"
   },
   "dependencies": {
+    "@capacitor-firebase/analytics": "^8.0.1",
     "@capacitor/android": "^8.0.0",
     "@capacitor/ios": "^8.0.0",
     "@capacitor/preferences": "^8.0.0",
+    "@capacitor/push-notifications": "^8.0.0",
     "@capacitor/splash-screen": "^8.0.0",
     "@capacitor/status-bar": "^8.0.0",
     "@emotion/react": "^11.14.0",
@@ -36,6 +38,7 @@
     "cookies": "^0.9.1",
     "dayjs": "^1.11.13",
     "emailjs-com": "^3.2.0",
+    "firebase": "^12.7.0",
     "html2canvas": "^1.4.1",
     "jquery": "^3.7.1",
     "js-cookie": "^3.0.5",
