--- a/frontend/android/gradle.properties
+++ b/frontend/android/gradle.properties
@@ -1,22 +1,56 @@
 # Project-wide Gradle settings.
+# ============================================
 
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
 # any settings specified in this file.
 
-# For more details on how to configure your build environment visit
-# http://www.gradle.org/docs/current/userguide/build_environment.html
+# ============================================
+# JVM MEMORY SETTINGS
+# ============================================
 
-# Specifies the JVM arguments used for the daemon process.
-# The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx1536m
+# Increased heap size for better build performance
+# Adjust based on your machine's RAM (4GB+ recommended for large projects)
+org.gradle.jvmargs=-Xmx4096m -XX:+HeapDumpOnOutOfMemoryError -XX:+UseParallelGC -Dfile.encoding=UTF-8
 
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
-# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
+# ============================================
+# BUILD PERFORMANCE
+# ============================================
 
-# AndroidX package structure to make it clearer which packages are bundled with the
-# Android operating system, and which are packaged with your app's APK
-# https://developer.android.com/topic/libraries/support-library/androidx-rn
+# Enables parallel project execution for faster multi-module builds
+org.gradle.parallel=true
+
+# Enables build caching for faster incremental builds
+org.gradle.caching=true
+
+# Enables configuration caching (experimental but stable in Gradle 8+)
+org.gradle.configuration-cache=true
+
+# Only configure projects that are needed for the build
+org.gradle.configureondemand=true
+
+# ============================================
+# ANDROID SPECIFIC
+# ============================================
+
+# AndroidX package structure
 android.useAndroidX=true
+
+# Enable R8 full mode for better code shrinking and optimization
+android.enableR8.fullMode=true
+
+# Enable non-transitive R classes to reduce APK size
+android.nonTransitiveRClass=true
+
+# ============================================
+# KOTLIN (if applicable)
+# ============================================
+
+# Enable incremental compilation for Kotlin
+kotlin.incremental=true
+
+# Enable parallel compilation for Kotlin
+kotlin.parallel.tasks.in.project=true
+
+# Use JVM IR backend for better performance
+kotlin.code.style=official
