--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "node-fetch": "^2.7.0",
     "node-mailjet": "^6.0.11",
     "pdfkit": "^0.17.1",
+    "socket.io": "^4.8.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
