--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^10.0.0",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^7.6.2",
     "react-toastify": "^11.0.5",
