--- a/frontend/android/app/build.gradle
+++ b/frontend/android/app/build.gradle
@@ -32,9 +32,10 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         
-        // Version management - increment versionCode for each release
-        versionCode 10000
-        versionName "1.0.0"
+        // Production-Grade versioning: MAJOR * 10000 + MINOR * 100 + PATCH
+        // For example, version 1.0.1 translates to 10001
+        versionCode 10001
+        versionName "1.0.1"
         
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         
