--- a/frontend/android/app/build.gradle
+++ b/frontend/android/app/build.gradle
@@ -132,6 +132,9 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:33.7.0')
     implementation 'com.google.firebase:firebase-messaging'
     
+    // Baseline Profile for faster cold start
+    implementation 'androidx.profileinstaller:profileinstaller:1.4.1'
+    
     implementation project(':capacitor-cordova-android-plugins')
 }
 
